Add building images
